--- a/index.css
+++ b/index.css
@@ -112,6 +112,7 @@ footer{
         gap: 5rem;
     }
     .box {
+        width: 100vw;
         flex-direction: column;
         margin-bottom: 2%;
         height: max-content;
